[gd_scene load_steps=7 format=3 uid="uid://syl1o6nkw1mp"]

[ext_resource type="Texture2D" uid="uid://8tbu4jk0x4a3" path="res://images/shop.png" id="1_8r1wq"]
[ext_resource type="Script" uid="uid://bbjqyqy0op4y2" path="res://scripts/shop.gd" id="1_y6sft"]
[ext_resource type="FontFile" uid="uid://k46cenfp5uuq" path="res://assets/comic-bald.otf" id="4_m4ofw"]
[ext_resource type="FontFile" uid="uid://cjjv6xvoknwi2" path="res://assets/FOT-NewRodin Pro EB.otf" id="5_heatd"]
[ext_resource type="FontFile" uid="uid://dxvcnxd4rsx3g" path="res://assets/Seven Segment.ttf" id="6_1v8qu"]
[ext_resource type="AudioStream" uid="uid://dhegox3gk8ups" path="res://music/shop/Low quality cat spins to Building Contraptions.mp3" id="6_8r1wq"]

[node name="shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y6sft")

[node name="Shop" type="Sprite2D" parent="."]
position = Vector2(582, 335)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_8r1wq")

[node name="upgradeTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 541.0
offset_top = 239.0
offset_right = 689.0
offset_bottom = 273.8
theme_override_fonts/font = ExtResource("4_m4ofw")
theme_override_font_sizes/font_size = 31
text = "upgrade title"

[node name="upgradeDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 541.0
offset_top = 282.0
offset_right = 689.0
offset_bottom = 316.8
theme_override_fonts/font = ExtResource("4_m4ofw")
theme_override_font_sizes/font_size = 26
text = "description"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 203.0
offset_top = 231.0
offset_right = 352.0
offset_bottom = 374.0

[node name="carTypeSelector" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_heatd")
theme_override_font_sizes/font_size = 36
text = "car"
flat = true
alignment = 0

[node name="engineTypeSelector" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_heatd")
theme_override_font_sizes/font_size = 36
text = "engine"
flat = true
alignment = 0

[node name="flingTypeSelector" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_heatd")
theme_override_font_sizes/font_size = 36
text = "fling"
flat = true
alignment = 0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 160.0
offset_right = 498.0
offset_bottom = 183.0
color = Color(0.768627, 0.545098, 0.337255, 1)

[node name="distance" type="Label" parent="."]
layout_mode = 0
offset_left = 407.0
offset_top = 160.0
offset_right = 497.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1v8qu")
theme_override_font_sizes/font_size = 21
text = "dist"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 5.0
offset_right = 1293.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("4_m4ofw")
theme_override_font_sizes/font_size = 16
text = "W 0:00:05:652   The local variable \"pluh\" is a variable
  <GDScript Error>lol
  <GDScript Source>shop.gd :3
"

[node name="upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 159.0
offset_top = 392.0
offset_right = 499.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("4_m4ofw")
theme_override_font_sizes/font_size = 41
text = "upgrade"
flat = true

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 510.0
offset_right = 884.0
offset_bottom = 555.0
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8r1wq")
autoplay = true

[node name="money" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 600.0
offset_right = 386.0
offset_bottom = 636.6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1v8qu")
theme_override_font_sizes/font_size = 35
text = "BANK: 00$"
